force-app/main/default/objects/TW1_Request__c/fields/TW1_NF__c.field-meta.xml
<CustomField>
    <fullName>TW1_NF__c</fullName>
    <inlineHelpText>This field is read-only. Do not try to fill it.</inlineHelpText>
    <label>NF</label>
    <length>18</length>
    <type>Text</type>
</CustomField>