force-app/main/default/objects/TW1_Request__c/fields/TW1_NF_Doc_ID__c.field-meta.xml
<CustomField>
    <fullName>TW1_NF_Doc_ID__c</fullName>
    <label>NF Doc ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>