force-app/main/default/objects/TW1_Request__c/fields/TW1_NF_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>TW1_NF_Invoice_Status__c</fullName>
    <inlineHelpText>This field is read-only. Do not try to fill it.</inlineHelpText>
    <label>NF/Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting ACCEPT or REJECT NF or Invoice</fullName>
            </value>
            <value>
                <fullName>NF Accepted</fullName>
            </value>
            <value>
                <fullName>NF Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>