force-app/main/default/objects/TW1_Request__c/fields/TW1_NF_Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_NF_Shipping_Date__c</fullName>
    <label>NF Shipping Date</label>
    <type>DateTime</type>
</CustomField>