force-app/main/default/objects/TW1_Request__c/fields/TW1_OE_Engineer_Email__c.field-meta.xml
<CustomField>
    <fullName>TW1_OE_Engineer_Email__c</fullName>
    <label>OE Engineer Email</label>
    <type>Email</type>
</CustomField>