force-app/main/default/objects/TW1_Request__c/fields/TW1_Operation_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>TW1_Operation_Manager_Email__c</fullName>
    <label>Operation Manager Email</label>
    <type>Email</type>
</CustomField>