force-app/main/default/objects/TW1_Request__c/fields/TW1_Other_rejection_reason__c.field-meta.xml
<CustomField>
    <fullName>TW1_Other_rejection_reason__c</fullName>
    <label>Other rejection reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>