force-app/main/default/objects/TW1_Request__c/fields/TW1_Payment_Conditions__c.field-meta.xml
<CustomField>
    <fullName>TW1_Payment_Conditions__c</fullName>
    <defaultValue>&quot;30 days&quot;</defaultValue>
    <label>Payment Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 days</fullName>
                <default>true</default>
                <label>30 days</label>
            </value>
            <value>
                <fullName>45 days</fullName>
            </value>
            <value>
                <fullName>a</fullName>
                <isActive>false</isActive>
                <label>a</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>