force-app/main/default/objects/TW1_Request__c/fields/TW1_Payment_Form__c.field-meta.xml
<CustomField>
    <fullName>TW1_Payment_Form__c</fullName>
    <defaultValue>&quot;Bank transfer&quot;</defaultValue>
    <label>Payment Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank transfer</fullName>
            </value>
            <value>
                <fullName>Bank slip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>