force-app/main/default/objects/TW1_Request__c/fields/TW1_Planned_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Planned_Delivery_Date__c</fullName>
    <label>Planned Delivery Date</label>
    <type>Date</type>
</CustomField>