force-app/main/default/objects/TW1_Request__c/fields/TW1_PO_or_FWA__c.field-meta.xml
<CustomField>
    <fullName>TW1_PO_or_FWA__c</fullName>
    <label>PO or FWA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FWA</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>