force-app/main/default/objects/TW1_Request__c/fields/TW1_Previous_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>TW1_Previous_Contract_Amount__c</fullName>
    <formula>IF( NOT(ISBLANK(TW1_Related_Contract__c )),



TW1_Related_Contract__r.TW1_Contracted_Value_B__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>