force-app/main/default/objects/TW1_Request__c/fields/TW1_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>TW1_Project_Number__c</fullName>
    <inlineHelpText>Supplier number control</inlineHelpText>
    <label>Project Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>