force-app/main/default/objects/TW1_Request__c/fields/TW1_Purchase_Item__c.field-meta.xml
<CustomField>
    <fullName>TW1_Purchase_Item__c</fullName>
    <label>Purchase Item</label>
    <length>5</length>
    <type>Text</type>
</CustomField>