force-app/main/default/objects/TW1_Request__c/fields/TW1_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>TW1_Purchase_Order__c</fullName>
    <inlineHelpText>Fill as the Ex.: PO-45000XXXXX / AM-MV20-20-00001</inlineHelpText>
    <label>Purchase Order</label>
    <length>24</length>
    <type>Text</type>
</CustomField>