force-app/main/default/objects/TW1_Request__c/fields/TW1_Red_Flag_Compliance_Step_2__c.field-meta.xml
<CustomField>
    <fullName>TW1_Red_Flag_Compliance_Step_2__c</fullName>
    <label>Red Flag - Compliance - Step 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TW1_Red_Flag</valueSetName>
    </valueSet>
</CustomField>