force-app/main/default/objects/TW1_Request__c/fields/TW1_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>TW1_Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rejection_Reason</valueSetName>
    </valueSet>
</CustomField>