force-app/main/default/objects/TW1_Request__c/fields/TW1_Related_Contract__c.field-meta.xml
<CustomField>
    <fullName>TW1_Related_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contract</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TW1_MODEC_Contract__c.TW1_Vendor__c</field>
            <operation>equals</operation>
            <valueField>$Source.TW1_Vendor__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TW1_MODEC_Contract__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>