force-app/main/default/objects/TW1_Request__c/fields/TW1_Related_Request__c.field-meta.xml
<CustomField>
    <fullName>TW1_Related_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>5 AND (1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>TW1_Request__c.TW1_Inspection_Perfomed__c</field>
            <operation>equals</operation>
            <value>Material Release</value>
        </filterItems>
        <filterItems>
            <field>$Source.TW1_Inspection_Perfomed__c</field>
            <operation>equals</operation>
            <value>Pressure Test, Delivery, Dimensional, Welding</value>
        </filterItems>
        <filterItems>
            <field>TW1_Request__c.TW1_Inspection_Perfomed__c</field>
            <operation>equals</operation>
            <value>Material Release, Pressure Test, Delivery, Dimensional, Painting, Welding, Documentation Analysis, PMI follow up, Others</value>
        </filterItems>
        <filterItems>
            <field>$Source.TW1_Inspection_Perfomed__c</field>
            <operation>equals</operation>
            <value>Material Release, Painting, Documentation Analysis, PMI follow up, Others</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Inspection</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TW1_Request__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>