force-app/main/default/objects/TW1_Request__c/fields/TW1_Requester__c.field-meta.xml
<CustomField>
    <fullName>TW1_Requester__c</fullName>
    <formula>CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName + &quot; - &quot;+ CreatedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requester</label>
    <type>Text</type>
</CustomField>