force-app/main/default/objects/TW1_Request__c/fields/TW1_Requesting_Area__c.field-meta.xml
<CustomField>
    <fullName>TW1_Requesting_Area__c</fullName>
    <label>Requesting Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adm</fullName>
            </value>
            <value>
                <fullName>BP&amp;M</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>EPCI</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Laboratory Management</fullName>
            </value>
            <value>
                <fullName>HSEQ</fullName>
            </value>
            <value>
                <fullName>Import / Export</fullName>
            </value>
            <value>
                <fullName>Integrity</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Materials Logistics</fullName>
            </value>
            <value>
                <fullName>People Logistics</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Navy</fullName>
            </value>
            <value>
                <fullName>Metering</fullName>
            </value>
            <value>
                <fullName>Operation</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Project - Fleet Services</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Process Safety</fullName>
            </value>
            <value>
                <fullName>Supply chain</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Technical Training</fullName>
            </value>
            <value>
                <fullName>Presidency</fullName>
            </value>
            <value>
                <fullName>Providers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>