force-app/main/default/objects/TW1_Request__c/fields/TW1_Reschedule_Inspection__c.field-meta.xml
<CustomField>
    <fullName>TW1_Reschedule_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reschedule Inspection</label>
    <type>Checkbox</type>
</CustomField>