force-app/main/default/objects/TW1_Request__c/fields/TW1_Reschedule_Requester__c.field-meta.xml
<CustomField>
    <fullName>TW1_Reschedule_Requester__c</fullName>
    <label>Reschedule Requester</label>
    <length>255</length>
    <type>Text</type>
</CustomField>