force-app/main/default/objects/TW1_Request__c/fields/TW1_SAP_BM_Message__c.field-meta.xml
<CustomField>
    <fullName>TW1_SAP_BM_Message__c</fullName>
    <description>This field is updated by the connection with the SAP, regarding the creation of the BM reference number.</description>
    <label>SAP BM Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>