force-app/main/default/objects/TW1_Request__c/fields/TW1_Scheduled_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Scheduled_delivery_date__c</fullName>
    <label>Scheduled delivery date</label>
    <type>DateTime</type>
</CustomField>