force-app/main/default/objects/TW1_Request__c/fields/TW1_Seal__c.field-meta.xml
<CustomField>
    <fullName>TW1_Seal__c</fullName>
    <label>Seal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>