force-app/main/default/objects/TW1_Request__c/fields/TW1_Send_inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Send_inspection_Date__c</fullName>
    <label>Send inspection Date</label>
    <type>DateTime</type>
</CustomField>