force-app/main/default/objects/TW1_Request__c/fields/TW1_Send_Material_Packing_List__c.field-meta.xml
<CustomField>
    <fullName>TW1_Send_Material_Packing_List__c</fullName>
    <label>Send Material Packing List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>