force-app/main/default/objects/TW1_Request__c/fields/TW1_Send_to_Compliance__c.field-meta.xml
<CustomField>
    <fullName>TW1_Send_to_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Compliance</label>
    <type>Checkbox</type>
</CustomField>