force-app/main/default/objects/TW1_Request__c/fields/TW1_Send_To_Contract_Tteam__c.field-meta.xml
<CustomField>
    <fullName>TW1_Send_To_Contract_Tteam__c</fullName>
    <label>Send To Contract Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>