force-app/main/default/objects/TW1_Request__c/fields/TW1_Send_to_Engineering__c.field-meta.xml
<CustomField>
    <fullName>TW1_Send_to_Engineering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Engineering</label>
    <type>Checkbox</type>
</CustomField>