force-app/main/default/objects/TW1_Request__c/fields/TW1_Service_Description__c.field-meta.xml
<CustomField>
    <fullName>TW1_Service_Description__c</fullName>
    <label>Service Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>