force-app/main/default/objects/TW1_Request__c/fields/TW1_Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Service_End_Date__c</fullName>
    <label>Service End Date</label>
    <type>Date</type>
</CustomField>