force-app/main/default/objects/TW1_Request__c/fields/TW1_Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Service_Start_Date__c</fullName>
    <label>Service Start Date</label>
    <type>Date</type>
</CustomField>