force-app/main/default/objects/TW1_Request__c/fields/TW1_Slin_Expiration__c.field-meta.xml
<CustomField>
    <fullName>TW1_Slin_Expiration__c</fullName>
    <label>Sling Expiration</label>
    <type>Date</type>
</CustomField>