force-app/main/default/objects/TW1_Request__c/fields/TW1_Spend_over_100kUSD_on_the_first_Year__c.field-meta.xml
<CustomField>
    <fullName>TW1_Spend_over_100kUSD_on_the_first_Year__c</fullName>
    <label>Spend over 100kUSD on the first Year?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>