force-app/main/default/objects/TW1_Request__c/fields/TW1_State__c.field-meta.xml
<CustomField>
    <fullName>TW1_State__c</fullName>
    <formula>TW1_Vendor__r.BillingState</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>