force-app/main/default/objects/TW1_Request__c/fields/TW1_Subject__c.field-meta.xml
<CustomField>
    <fullName>TW1_Subject__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject</label>
    <type>Text</type>
</CustomField>