force-app/main/default/objects/TW1_Request__c/fields/TW1_Suply_Nature__c.field-meta.xml
<CustomField>
    <fullName>TW1_Suply_Nature__c</fullName>
    <label>Supply Nature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Material/Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>