force-app/main/default/objects/TW1_Request__c/fields/TW1_Supplier_Email__c.field-meta.xml
<CustomField>
    <fullName>TW1_Supplier_Email__c</fullName>
    <label>Supplier Email</label>
    <type>Email</type>
</CustomField>