force-app/main/default/objects/TW1_Request__c/fields/TW1_Supplier_Reference_Number_for_BM__c.field-meta.xml
<CustomField>
    <fullName>TW1_Supplier_Reference_Number_for_BM__c</fullName>
    <label>Supplier Reference Number for BM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>