force-app/main/default/objects/TW1_Request__c/fields/TW1_Supplier_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>TW1_Supplier_Suggestion__c</fullName>
    <label>Supplier Suggestion</label>
    <type>TextArea</type>
</CustomField>