force-app/main/default/objects/TW1_Request__c/fields/TW1_Supplier_Type__c.field-meta.xml
<CustomField>
    <fullName>TW1_Supplier_Type__c</fullName>
    <formula>TEXT(TW1_Vendor__r.TW1_Supplier_Type__c)</formula>
    <label>Supplier Type</label>
    <type>Text</type>
</CustomField>