force-app/main/default/objects/TW1_Request__c/fields/TW1_Supply_Contract_Manager_Supply_Chain__c.field-meta.xml
<CustomField>
    <fullName>TW1_Supply_Contract_Manager_Supply_Chain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supply Contract Manager - Supply Chain</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$UserRole.Name</field>
            <operation>equals</operation>
            <value>Supply Contract Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>