force-app/main/default/objects/TW1_Request__c/fields/TW1_Total_Weight__c.field-meta.xml
<CustomField>
    <fullName>TW1_Total_Weight__c</fullName>
    <label>Total Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>