force-app/main/default/objects/TW1_Request__c/fields/TW1_Type_of_cargo__c.field-meta.xml
<CustomField>
    <fullName>TW1_Type_of_cargo__c</fullName>
    <label>Type of cargo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comum</fullName>
            </value>
            <value>
                <fullName>Químico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>