force-app/main/default/objects/TW1_Request__c/fields/TW1_Vessel__c.field-meta.xml
<CustomField>
    <fullName>TW1_Vessel__c</fullName>
    <label>Vessel</label>
    <length>22</length>
    <type>Text</type>
</CustomField>