force-app/main/default/objects/TW1_Request__c/fields/TW1_Vetting_Stage__c.field-meta.xml
<CustomField>
    <fullName>TW1_Vetting_Stage__c</fullName>
    <label>Vetting Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>VVW Attachment</fullName>
            </value>
            <value>
                <fullName>Procurement Manager Validation</fullName>
            </value>
            <value>
                <fullName>Compliance Initial Validation</fullName>
            </value>
            <value>
                <fullName>Enable Customer User</fullName>
            </value>
            <value>
                <fullName>Waiting for Vendor Documentation</fullName>
            </value>
            <value>
                <fullName>Document Validation</fullName>
            </value>
            <value>
                <fullName>Vendor Evaluation</fullName>
            </value>
            <value>
                <fullName>On Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>