force-app/main/default/objects/TW1_Request__c/fields/TW1_Volume__c.field-meta.xml
<CustomField>
    <fullName>TW1_Volume__c</fullName>
    <label>Volume</label>
    <length>200</length>
    <type>Text</type>
</CustomField>