force-app/main/default/objects/TW1_Request__c/fields/TW1_VV_action_needed_Compliance_Step_1__c.field-meta.xml
<CustomField>
    <fullName>TW1_VV_action_needed_Compliance_Step_1__c</fullName>
    <label>VV action needed? - Compliance - Step 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TW1_VV_action_needed</valueSetName>
    </valueSet>
</CustomField>