force-app/main/default/objects/TW1_Request__c/fields/TW1_VV_action_needed_Docs_Validation_VV__c.field-meta.xml
<CustomField>
    <fullName>TW1_VV_action_needed_Docs_Validation_VV__c</fullName>
    <label>VV action needed? - Docs Validation (VV)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TW1_VV_action_needed</valueSetName>
    </valueSet>
</CustomField>