force-app/main/default/objects/TW1_Request__c/fields/TW1_VV_action_needed_GM_SC_FIN_CON__c.field-meta.xml
<CustomField>
    <fullName>TW1_VV_action_needed_GM_SC_FIN_CON__c</fullName>
    <label>VV action needed? - GM SC, FIN, CON</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TW1_VV_action_needed</valueSetName>
    </valueSet>
</CustomField>